Datasets creation + Module renaming

--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,21 @@ ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.simplicite.modules</groupId>
-  <version>0.1-SNAPSHOT</version>
-  <artifactId>ThemingAbel</artifactId>
-  <name>ThemingAbel</name>
-  <description>Simplicite module: ThemingAbel</description>
+  <version>0.2-SNAPSHOT</version>
+  <artifactId>SimThemes</artifactId>
+  <name>SimThemes</name>
+  <description>Simplicite module: SimThemes</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <simplicite.url>https://abel.demo.simplicite.io</simplicite.url>
     <simplicite.version>6.2-SNAPSHOT</simplicite.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <sonar.projectKey>simplicite-modules-ThemingAbel</sonar.projectKey>
-    <sonar.projectName>ThemingAbel</sonar.projectName>
-    <sonar.projectVersion>0.1</sonar.projectVersion>
+    <sonar.projectKey>simplicite-modules-SimThemes</sonar.projectKey>
+    <sonar.projectName>SimThemes</sonar.projectName>
+    <sonar.projectVersion>0.2</sonar.projectVersion>
     <sonar.sources>src,resources</sonar.sources>
-    <sonar.exclusions>ThemingAbel.xml,ThemingAbel.json,ThemingAbel-*.yml,configuration/**,**.min.js,**.min.css</sonar.exclusions>
+    <sonar.exclusions>SimThemes.xml,SimThemes.json,SimThemes-*.yml,configuration/**,**.min.js,**.min.css</sonar.exclusions>
     <sonar.coverage.exclusions>resources/**.js,src/**.java</sonar.coverage.exclusions>
   </properties>
   <packaging>jar</packaging>
@@ -82,7 +82,7 @@ ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
     </repository>
   </repositories>
   <scm>
-    <url>${simplicite.url}/git/ThemingAbel</url>
+    <url>${simplicite.url}/git/SimThemes</url>
   </scm>
   <dependencies>
     <dependency>
