--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "stylelint-config-standard": "latest",
     "postcss-less": "latest"
   },
-  "name": "ThemingAbel",
+  "name": "SimThemes",
   "scripts": {
     "eslint": "eslint --config=.eslint-configuration --no-color --no-error-on-unmatched-pattern resources/**/*.js",
     "stylelint": "stylelint --config=.stylelint-configuration --no-color --allow-empty-input resources/**/*.css resources/**/*.less",
     "jshint": "jshint --config=.jshint-configuration --reporter=jslint resources"
   },
-  "version": "0.1"
+  "version": "0.2"
 }
