--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@ ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
   <description>Simplicite module: SimThemes</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <simplicite.url>https://abelsandbox.dev2.simplicite.io</simplicite.url>
-    <simplicite.version>6.3-SNAPSHOT</simplicite.version>
+    <simplicite.url>https://abel.dev2.simplicite.io</simplicite.url>
+    <simplicite.version>6.2-SNAPSHOT</simplicite.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.proc>full</maven.compiler.proc>
